--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+
 <style>
     
     html {
         padding: 3% 10%;
     }
 
-   th, td {
-       border: 2px solid #02303A;
-       font-size: 110%;
-       padding: 30px;
-       margin: 0px;
-   }
-
-   .button {
-       border: none;
-   }
+     #sub {
+        background-color: #02303A;
+        color: white;
+        font-size: 110%;
+        width: 10%;
+    }
 
    #seq{
        width:100%;
@@ -29,17 +36,8 @@
         color: #02303A;
     }
 
-    #sub, head {
+    .btn-info {
         background-color: #02303A;
-        color: white;
-        font-size: 110%;
-        width: 10%;
-    }
-
-
-    #sub:hover {
-        background-color: #356368;
-        cursor: pointer;
     }
 
     #menu {
@@ -60,13 +58,13 @@
     <div id="menu"></div>
     <p>Sequence</p>
     <form id="form" action="/" method="POST">
-        <input type="text" id="seq" name="sequence" value="GGGCAGUGAUCUAGGCUACUGGAUUGAGAGUGAGAAGAAUGACACAUGGAGGCUGAAGAGGGCCCAUCUGAUCGAGAUGAAAACAUGUGAAUGGCCAAAGUCCCACACAUUGUGGACAGAUGGAAUAGAAGAGAGUGAUCUGAUCAUACCCAAGUCUUUAGCUGGGC"><br>
-        <input id="sub" type="submit" value="Submit">
+        <input type="text" id="seq" name="sequence" value="GGGCAGUGAUCUAGGCUACUGGAUUGAGAGUGAGAAGAAUGACACAU"><br>
+        <input  class="btn btn-info" type="submit" value="Submit">
     </form>
 </body>
 
 <div style="height:50px;"></div>
-<table class="target_sequences">
+<table class="table table-striped">
     {% if list|length > 0 %}
   <!--  <tr class="button">
         <td class="button"></td>
@@ -102,17 +100,27 @@
 
     </tr>
      <tr> -->
-        <td id="head">Target sequence</td>
-         <td id="head">Score=5*a + 4*b + 3*c</td>
+        <thead>
+            <td><b>Target sequence</b></td>
+            <td><b>Score</b></td>
 
-    </tr>
+        </thead>
     {% endif %}
+    <tbody>
+    {% set cnt = 0 %}
     {% for elements in list %}
         <tr>
             <td> {{elements[0]}} </td>
             <td> {{elements[5]}}</td>
-
+            <td> <form action="/details" method="POST">
+                     <input type="hidden" name="list" value="{{list}}">
+                     <input type="hidden" name="index" value="{{loop.index0}}">
+                     <input type="submit" class="btn btn-info" value="See more">
+                 </form>
+            </td>
         </tr>
+        {% set cnt = cnt + 1 %}
     {% endfor %}
+    </tbody>
  </table>
 </html>
