--- a/templates/index.html
+++ b/templates/index.html
@@ -2,125 +2,34 @@
 <html lang="en">
 
 <head>
-    <!-- Latest compiled and minified CSS -->
+        <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+        .row {
+            margin-top: 10%;
+        }
+    </style>
 </head>
 
-<style>
-    
-    html {
-        padding: 3% 10%;
-    }
-
-     #sub {
-        background-color: #02303A;
-        color: white;
-        font-size: 110%;
-        width: 10%;
-    }
-
-   #seq{
-       width:100%;
-       margin-bottom: 50px;
-       margin-top: 5px;
-   }
-
-    p {
-        font-size: 150%;
-        color: #02303A;
-    }
-
-    .btn-info {
-        background-color: #02303A;
-    }
-
-    #menu {
-        width:100%;
-        margin: 0px;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 200%;
-        height: 50px;
-        background-color: #02303A;
-    }
-
-</style>
-
 <body>
+<img  class="center-block"  style="width:50%;" src="http://2017.igem.org/wiki/images/a/ac/T--EPFL--ToeholdDesigner_V2.svg" />
 
-    <div id="menu"></div>
-    <p>Sequence</p>
-    <form id="form" action="/" method="POST">
-        <input type="text" id="seq" name="sequence" value="GGGCAGUGAUCUAGGCUACUGGAUUGAGAGUGAGAAGAAUGACACAU"><br>
-        <input  class="btn btn-info" type="submit" value="Submit">
-    </form>
+<div class="row">
+    <div class="col-md-4 text-center">
+        <a class="btn btn-info" href="http://2017.igem.org/Team:EPFL/Software">Read more</a>
+    </div>
+        <div class="col-md-4 text-center">
+        <a class="btn btn-info"  href="http://2017.igem.org/Team:EPFL/Software/Demo">Demo</a>
+    </div>
+    <div class="col-md-4 text-center">
+        <a class="btn btn-info" href="/home">Start</a>
+    </div>
+</div>
 </body>
 
-<div style="height:50px;"></div>
-<table class="table table-striped">
-    {% if list|length > 0 %}
-  <!--  <tr class="button">
-        <td class="button"></td>
-        <td class="button"></td>
-        <td class="button">
-            <form action="/sort" method="POST">
-                <input type="submit" value="Sort">
-                <input type="hidden" name="list" value="{{ list }}">
-                <input type="hidden" name="sort_by" value="target">
-            </form>
-        </td>
-           <td class="button">
-             <form action="/sort" method="POST">
-                <input type="submit" value="Sort">
-                <input type="hidden" name="list" value="{{ list }}">
-                <input type="hidden" name="sort_by" value="toehold">
-            </form>
-        </td>
-      <td class="button">
-             <form action="/sort" method="POST">
-                <input type="submit" value="Sort">
-                <input type="hidden" name="list" value="{{ list }}">
-                <input type="hidden" name="sort_by" value="sensor">
-            </form>
-        </td>
-      <td class="button">
-             <form action="/sort" method="POST">
-                <input type="submit" value="Sort">
-                <input type="hidden" name="list" value="{{ list }}">
-                <input type="hidden" name="sort_by" value="score">
-            </form>
-        </td>
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    </tr>
-     <tr> -->
-        <thead>
-            <td><b>Target sequence</b></td>
-            <td><b>Score</b></td>
-
-        </thead>
-    {% endif %}
-    <tbody>
-    {% set cnt = 0 %}
-    {% for elements in list %}
-        <tr>
-            <td> {{elements[0]}} </td>
-            <td> {{elements[5]}}</td>
-            <td> <form action="/details" method="POST">
-                     <input type="hidden" name="list" value="{{list}}">
-                     <input type="hidden" name="index" value="{{loop.index0}}">
-                     <input type="submit" class="btn btn-info" value="See more">
-                 </form>
-            </td>
-        </tr>
-        {% set cnt = cnt + 1 %}
-    {% endfor %}
-    </tbody>
- </table>
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </html>
