--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,13 @@
 <img  class="center-block"  style="width:50%;" src="http://2017.igem.org/wiki/images/a/ac/T--EPFL--ToeholdDesigner_V2.svg" />
 
 <div class="row">
-    <div class="col-md-4 text-center">
+    <div class="col-md-2" style="margin-left:33%;">
         <a class="btn btn-info" href="http://2017.igem.org/Team:EPFL/Software">Read more</a>
     </div>
-        <div class="col-md-4 text-center">
+        <div class="col-md-2">
         <a class="btn btn-info"  href="http://2017.igem.org/Team:EPFL/Software/Demo">Demo</a>
     </div>
-    <div class="col-md-4 text-center">
+    <div class="col-md-2">
         <a class="btn btn-info" href="/home">Start</a>
     </div>
 </div>
